docs: rewrite README for new server.sh workflow